@@ -12,6 +12,7 @@ tmx.selection.color = 0x0000FF
 tiled.grid.color = 0x000000
 tiled.grid.opacity = 255
 tiled.grid.antialias = 1
+tiled.cursorhighlight = 1
 
 # recent files
 tmx.recent.1 =
