@@ -4,16 +4,18 @@
 <!ATTLIST map
     id          ID     #IMPLIED
     orientation (orthogonal | isometric | hexagonal | oblique)  #REQUIRED
+    version     CDATA  #IMPLIED
     width       CDATA  #REQUIRED
     height      CDATA  #REQUIRED
     tilewidth   CDATA  #REQUIRED
     tileheight  CDATA  #REQUIRED
 >
 
-<!ELEMENT tileset (image | tile+)>
+<!ELEMENT tileset (image+ | tile+ | EMPTY)>
 <!ATTLIST tileset
     name       CDATA #IMPLIED
     source     CDATA #IMPLIED
+    basedir    CDATA #IMPLIED
     firstgid   CDATA #REQUIRED
     tilewidth  CDATA #IMPLIED
     tileheight CDATA #IMPLIED
@@ -44,9 +46,9 @@
     source   CDATA #REQUIRED
 >
 
-<!ELEMENT image (data)>
+<!ELEMENT image (data | EMPTY)>
 <!ATTLIST image
-    format   CDATA #REQUIRED
+    format   CDATA #IMPLIED
     source   CDATA #IMPLIED
 >
 
